--- a/Changes.txt
+++ b/Changes.txt
@@ -8,6 +8,8 @@ core:
 * Don't forget to remove logs folder on uninstall
 * WakeOnlan task supported again
 * fix: update logfile option when installdir is not the default
+* set "add-firewall-exception" by default now
+* add "/no-firewall-exception" option to permit to change the new default
 * fix: rc & development releases installers are now running with installer debug
   option enabled. This creates the debug subfolder to put in command parser log
   and computed Options.ini file.
