--- a/Changes.txt
+++ b/Changes.txt
@@ -10,6 +10,7 @@ core:
 * fix: update logfile option when installdir is not the default
 * set "add-firewall-exception" by default now
 * add "/no-firewall-exception" option to permit to change the new default
+* doc: always show english help as only this one is available
 * fix: rc & development releases installers are now running with installer debug
   option enabled. This creates the debug subfolder to put in command parser log
   and computed Options.ini file.
